--- a/n_0.md
+++ b/n_0.md
@@ -1,3 +1,4 @@
 # Hands-on-3
 
-According to the Curve and Fitted Data by eye-balling see that the curve shows a small deviation at n_0 = 2200.
+According to the Curve and Fitted Data by eye-balling see that the curve shows a small deviation at n_0 = 2250
+.
