--- a/n_0.md
+++ b/n_0.md
@@ -2,3 +2,4 @@
 
 According to the Curve and Fitted Data by eye-balling see that the curve shows a small deviation at n_0 = 2250
 .
+![run time graph](https://github.com/user-attachments/assets/30b48007-50a1-4302-8eb0-f42f7a6528e3)
